// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateOpinion /> when the query is on desktop should render a FOR opinion 1`] = `
<div
  className="sc-bdvvtL kHGcPq cap-card"
>
  <div
    className="sc-bdvvtL htsjLE sc-fWCJzd rNujt cap-tag"
    style={Object {}}
    title=""
  >
    <span
      className="sc-bdvvtL OPGjj cap-text"
    >
      opinion.for
    </span>
  </div>
  <div
    className="sc-bdvvtL cBtkiE"
  />
  <div
    className="sc-bdvvtL jiIFbU"
  >
    <div
      className="sc-bdvvtL gnFHBK"
    >
      <div
        className="sc-bdvvtL csVBNw sc-clIzBv eqbzZb cap-avatar"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
        title="Agui le penseur"
      >
        <img
          alt="Agui le penseur"
          className="sc-bdvvtL gEWnzg"
          src="<mock-value-for-field-\\"url\\">"
          style={
            Object {
              "objectFit": "cover",
            }
          }
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdvvtL hMajps"
      >
        <p
          className="sc-bdvvtL kfIMJ cap-text"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdvvtL iwHQxl cap-text"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdvvtL tiMdF"
    >
      <h4
        className="sc-bdvvtL ixkJHe cap-heading"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdvvtL ciyRZw cap-text"
      >
        <div
          className=" ql-editor wysiwyg-render"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`<DebateOpinion /> when the query is on desktop should render an AGAINST opinion 1`] = `
<div
  className="sc-bdvvtL kHGcPq cap-card"
>
  <div
    className="sc-bdvvtL htsjLE sc-fWCJzd rNujt cap-tag"
    style={Object {}}
    title=""
  >
    <span
      className="sc-bdvvtL OPGjj cap-text"
    >
      opinion.for
    </span>
  </div>
  <div
    className="sc-bdvvtL cBtkiE"
  />
  <div
    className="sc-bdvvtL jiIFbU"
  >
    <div
      className="sc-bdvvtL gnFHBK"
    >
      <div
        className="sc-bdvvtL csVBNw sc-clIzBv eqbzZb cap-avatar"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
        title="Agui le penseur"
      >
        <img
          alt="Agui le penseur"
          className="sc-bdvvtL gEWnzg"
          src="<mock-value-for-field-\\"url\\">"
          style={
            Object {
              "objectFit": "cover",
            }
          }
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdvvtL hMajps"
      >
        <p
          className="sc-bdvvtL kfIMJ cap-text"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdvvtL iwHQxl cap-text"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdvvtL tiMdF"
    >
      <h4
        className="sc-bdvvtL ixkJHe cap-heading"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdvvtL ciyRZw cap-text"
      >
        <div
          className=" ql-editor wysiwyg-render"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`<DebateOpinion /> when the query is on desktop should render with a read more link 1`] = `
<div
  className="sc-bdvvtL gsmzaI cap-card"
>
  <div
    className="sc-bdvvtL htsjLE sc-fWCJzd rNujt cap-tag"
    style={Object {}}
    title=""
  >
    <span
      className="sc-bdvvtL OPGjj cap-text"
    >
      opinion.for
    </span>
  </div>
  <div
    className="sc-bdvvtL jiIFbU"
  >
    <div
      className="sc-bdvvtL gnFHBK"
    >
      <div
        className="sc-bdvvtL csVBNw sc-clIzBv eqbzZb cap-avatar"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
        title="Agui le penseur"
      >
        <img
          alt="Agui le penseur"
          className="sc-bdvvtL gEWnzg"
          src="<mock-value-for-field-\\"url\\">"
          style={
            Object {
              "objectFit": "cover",
            }
          }
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdvvtL hMajps"
      >
        <p
          className="sc-bdvvtL kfIMJ cap-text"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdvvtL iwHQxl cap-text"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdvvtL tiMdF"
    >
      <h4
        className="sc-bdvvtL ixkJHe cap-heading"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdvvtL ciyRZw cap-text"
      >
        <div
          className=" ql-editor wysiwyg-render"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`<DebateOpinion /> when the query is on mobile should render a FOR opinion 1`] = `
<div
  className="sc-bdvvtL kHGcPq cap-card"
>
  <div
    className="sc-bdvvtL htsjLE sc-fWCJzd rNujt cap-tag"
    style={Object {}}
    title=""
  >
    <span
      className="sc-bdvvtL OPGjj cap-text"
    >
      opinion.for
    </span>
  </div>
  <div
    className="sc-bdvvtL cBtkiE"
  />
  <div
    className="sc-bdvvtL jiIFbU"
  >
    <div
      className="sc-bdvvtL gnFHBK"
    >
      <div
        className="sc-bdvvtL csVBNw sc-clIzBv eqbzZb cap-avatar"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
        title="Agui le penseur"
      >
        <img
          alt="Agui le penseur"
          className="sc-bdvvtL gEWnzg"
          src="<mock-value-for-field-\\"url\\">"
          style={
            Object {
              "objectFit": "cover",
            }
          }
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdvvtL hMajps"
      >
        <p
          className="sc-bdvvtL kfIMJ cap-text"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdvvtL iwHQxl cap-text"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdvvtL tiMdF"
    >
      <h4
        className="sc-bdvvtL ixkJHe cap-heading"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdvvtL ciyRZw cap-text"
      >
        <div
          className=" ql-editor wysiwyg-render"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
      <button
        className="sc-bdvvtL sc-lcepkR iYtYR izhULq cap-button DebateOpinion___StyledButton-eaGvMt iPqugS"
        onClick={[Function]}
        type="button"
      >
        capco.module.read_more
      </button>
    </div>
  </div>
</div>
`;

exports[`<DebateOpinion /> when the query is on mobile should render with a read more link 1`] = `
<div
  className="sc-bdvvtL gsmzaI cap-card"
>
  <div
    className="sc-bdvvtL htsjLE sc-fWCJzd rNujt cap-tag"
    style={Object {}}
    title=""
  >
    <span
      className="sc-bdvvtL OPGjj cap-text"
    >
      opinion.for
    </span>
  </div>
  <div
    className="sc-bdvvtL jiIFbU"
  >
    <div
      className="sc-bdvvtL gnFHBK"
    >
      <div
        className="sc-bdvvtL csVBNw sc-clIzBv eqbzZb cap-avatar"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
        title="Agui le penseur"
      >
        <img
          alt="Agui le penseur"
          className="sc-bdvvtL gEWnzg"
          src="<mock-value-for-field-\\"url\\">"
          style={
            Object {
              "objectFit": "cover",
            }
          }
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdvvtL hMajps"
      >
        <p
          className="sc-bdvvtL kfIMJ cap-text"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdvvtL iwHQxl cap-text"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdvvtL tiMdF"
    >
      <h4
        className="sc-bdvvtL ixkJHe cap-heading"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdvvtL ciyRZw cap-text"
      >
        <div
          className=" ql-editor wysiwyg-render"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
      <button
        className="sc-bdvvtL sc-lcepkR iYtYR izhULq cap-button DebateOpinion___StyledButton-eaGvMt iPqugS"
        onClick={[Function]}
        type="button"
      >
        capco.module.read_more
      </button>
    </div>
  </div>
</div>
`;
